seperated into modules and added Model class for todo json object

--- a/views/base.html
+++ b/views/base.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
     	        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
                 
-                <title>My Title</title>
+                <title>{{title}}</title>
 		
                 <!-- BOOTSTRAP -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -17,8 +17,7 @@
         </head>
 
         <body>
-                <center><h1>My HTML</h1></center>
+                {{bodyContents}}
         </body>
 
 </html>
-
