view and html cr/edit

--- a/views/create.html
+++ b/views/create.html
@@ -4,7 +4,7 @@
 			<input type="text" name="todo" placeholder="What todo?">
 			<textarea name="description" placeholder="Describe your Todo here......">
 			</textarea>
-			<input class="btn btn-primary" type="submit" value="+ Add">
+			<input class="button btn btn-primary" type="submit" value="+ Add">
 		</form>	
 	</center>
 </div>
