--- a/views/todo.html
+++ b/views/todo.html
@@ -2,10 +2,10 @@
 	<div class = "row">
 		<div class = "col-sm-6">
 			<center>
-				<form action = "/create" method = "GET">
+				<form action = "/create" method = "POST">
 					<button class = "button btn-primary" type = "submit"> + ADD </button>
 				</form>
-				<form id = "todos" method = "GET">
+				<form method = "GET">
 					{{todos}}
 				</form>
 			</center>
