Created create page

--- a/views/todo.html
+++ b/views/todo.html
@@ -1,12 +1,14 @@
 <div class = "container">
 	<div class = "row">
 		<div class = "col-sm-6">
-			<form action = "/create" method = "GET">
-				<button class = "button btn-primary" type = "submit"> + ADD </button>
-			</form>
-			<form id = "todos" method = "GET">
-				{{todos}}
-			</form>
+			<center>
+				<form action = "/create" method = "GET">
+					<button class = "button btn-primary" type = "submit"> + ADD </button>
+				</form>
+				<form id = "todos" method = "GET">
+					{{todos}}
+				</form>
+			</center>
 		</div>
 	</div>
 </div>
