added routes declarations

--- a/views/view.html
+++ b/views/view.html
@@ -1,9 +1,8 @@
 <form action="/update" method="GET">
 
     <input type="hidden" name="ID" value="{{value}}">
-    <h3>TODOS</h3>
-    <h4>DESC</h4>
+    <h3>{{todos}}</h3>
+    <h4>{{desc}}</h4>
     <button class="button btn btn-primary" value="Update">
-    <br>
-
 </form>
+<br>
