--- a/views/view.html
+++ b/views/view.html
@@ -1,8 +1,8 @@
 <form action="/update" method="GET">
 
     <input type="hidden" name="ID" value="{{value}}">
-    <h3>{{todos}}</h3>
+    <h3>{{todo}}</h3>
     <h4>{{desc}}</h4>
-    <button class="button btn btn-primary" value="Update">
+    <input class="button btn btn-primary" value="Update">
 </form>
 <br>
