handeled /create route

--- a/views/create.html
+++ b/views/create.html
@@ -1,9 +1,11 @@
 <div class="container">
+	<br>
+	<br>
+	<br>
 	<center>
 		<form action="/create/save" method="GET">
-			<input type="text" name="todo" placeholder="What todo?">
-			<textarea name="description" placeholder="Describe your Todo here......">
-			</textarea>
+			<input type="text" name="todo" placeholder="What to do?" required> <br><br>
+			<textarea rows="12" cols="80" name="description" placeholder="Describe your Todo here......" required></textarea> <br>
 			<input class="button btn btn-primary" type="submit" value="+ Add">
 		</form>	
 	</center>
