--- a/views/view.html
+++ b/views/view.html
@@ -3,6 +3,6 @@
     <input type="hidden" name="ID" value="{{value}}">
     <h3>{{todo}}</h3>
     <h4>{{desc}}</h4>
-    <input class="button btn btn-primary" value="Update">
+    <input type="submit" class="button btn btn-primary" value="Update">
 </form>
 <br>
