added route declaration for save and delete

--- a/views/create.html
+++ b/views/create.html
@@ -3,7 +3,7 @@
 	<br>
 	<br>
 	<center>
-		<form action="/create/save" method="GET">
+		<form action="/save" method="GET">
 			<input type="text" name="todo" placeholder="What to do?" required> <br><br>
 			<textarea rows="12" cols="80" name="description" placeholder="Describe your Todo here......" required></textarea> <br>
 			<input class="button btn btn-primary" type="submit" value="+ Add">
