--- a/views/update.html
+++ b/views/update.html
@@ -3,7 +3,8 @@
     <br>
     <br>
 	<center>
-		<form action="/update/save" method="GET">
+		<form action="/save" method="GET">
+                        <input type="hidden" name="id" value="{{id}}">
 			<input type="text" name="todo" value="{{todo}}" required><br><br>
 			<textarea rows="12" cols="80" name="description" required>{{desc}}</textarea> <br>
 			<input class="button btn btn-primary" type="submit" value="Update">
